--- a/interactive-pricing-component-main/style.css
+++ b/interactive-pricing-component-main/style.css
@@ -95,6 +95,10 @@ p {
     font-weight: 800;
 }
 
+.price-wrapper {
+    display: flex;
+}
+
 .container-main {
     margin: 30px auto;
     border-bottom: 1px solid var(--light-grayish-blue-lighter);
@@ -109,7 +113,8 @@ p {
     -webkit-appearance: none;
     appearance: none;
     width: 100%;
-    background-color: var(--light-grayish-blue-lighter);
+    cursor: pointer;
+    background: var(--light-grayish-blue-lighter);
     height: 8px;
     border-radius: 10px;
     outline: none;
@@ -124,8 +129,9 @@ p {
     position: relative;
     cursor: pointer;
     background: url(images/icon-slider.svg) no-repeat center var(--strong-cyan);
+    box-shadow: 2px 10px 30px var(--strong-cyan);
+    transition: .2s ease-in-out;
 }
-
 
 .billing {
     display: flex;
@@ -151,6 +157,7 @@ p {
     position: absolute;
     top: 3px;
     left: 5px;
+    transition: left 0.2s;
 }
 
 .tag .circle.on {
