add mobile styles

--- a/intro-section-with-dropdown-navigation-main/style.css
+++ b/intro-section-with-dropdown-navigation-main/style.css
@@ -16,6 +16,7 @@
 
 body {
     font-family: var(--ff);
+    overflow: hidden;
     /* font-size: var(--fs); */
 }
 
@@ -26,6 +27,7 @@ header {
     color: var(--gray);
     justify-content: space-between;
     margin-bottom: 65px;
+    min-width: ;
 }
 
 .logo img {
@@ -130,3 +132,93 @@ main {
     display: none;
 }
 
+.menu-icon {
+    display: none;
+}
+
+@media screen and (max-width: 785px) {
+    .btn-wrapper {
+        display: none;
+    }
+
+    .information-container {
+        width: 70%;
+    }
+
+    .information-container h1 {
+        font-size: 45px;
+        margin-bottom: 20px;
+    }
+
+    .btn-fill {
+        margin-bottom: 30px;
+    }
+    
+}
+
+@media screen and (max-width: 650px){
+    header {
+        max-width: 375px;
+        margin: 20px auto;
+    }
+
+    .menu-icon {
+        cursor: pointer;
+        display: block;
+        align-self: center;
+        /* justify-self: flex-end; */
+    }
+
+    .wrap {
+        width: 100%;
+        justify-content: space-between;
+    }
+    
+    main {
+        flex-direction: column-reverse;
+        padding: 0;
+        max-width: 375px;
+    }
+    .hero {
+        width: 100%;
+        margin-bottom: 40px;
+    }
+
+    .information-container {
+        width: 100%;
+    }
+
+    .information-container h1 {
+        font-size: 35px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    
+    .text {
+        color: var(--gray);
+        line-height: 150%;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .btn-fill {
+        display: block;
+        margin: 0 auto 50px;
+    }
+
+    .btn-wrapper {
+        display: none;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .hero .desktop-hero {
+        display: none;
+    }
+
+    .hero .mobile-hero {
+        display: block;
+    }
+}
