--- a/intro-section-with-dropdown-navigation-main/style.css
+++ b/intro-section-with-dropdown-navigation-main/style.css
@@ -50,16 +50,60 @@ header {
 .nav-item {
     margin-right: 30px;
     text-wrap: nowrap;
+    transition: all 0.3s linear;
+    position: relative;
+}
+
+.features {
+    display: none;
+}
+
+.nav-item.active .features {
+    margin-top: 10px;
+    display: block;
+    width: 150px;
+    background-color: white;
+    padding: 20px 20px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px rgba(128, 128, 128, 0.451);
+    position: absolute;
+    top: 20px;
+    left: -60px;
+}
+
+.feature-item {
+    list-style: none;
+    margin: auto;
+    width: 60%;
+}
+
+.feature-wrapper {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.feature-wrapper:last-of-type {
+    margin-bottom: 0;
 }
 
 .nav-item:hover {
     cursor: pointer;
+    color: var(--black);
 }
 
 .nav-item:nth-of-type(1)::after,
 .nav-item:nth-of-type(2)::after {
     content: url(images/icon-arrow-down.svg);
     margin-left: 5px;
+}
+
+.nav-item:nth-of-type(1):hover::after,
+.nav-item:nth-of-type(2):hover::after {
+    content: url(images/icon-arrow-up.svg);
+    /* color: var(--black); */
+    /* fill: var(--black); */
 }
 
 .btn-wrapper {
@@ -73,6 +117,11 @@ header {
     padding: 10px 30px;
     background-color: transparent;
     cursor: pointer;
+    transition: color 0.3s linear;
+}
+
+.btn:hover {
+    color: var(--black);
 }
 
 .btn-border {
@@ -109,8 +158,15 @@ main {
     background-color: var(--black);
     color: var(--white);
     padding: 15px 30px;
+    border: 1px solid transparent;
     border-radius: 10px;
     margin-bottom: 100px;
+}
+
+.btn-fill:hover {
+    background-color: transparent;
+    border: 1px solid var(--black);
+    color: var(--black);
 }
 
 .companies {
