--- a/intro-section-with-dropdown-navigation-main/style.css
+++ b/intro-section-with-dropdown-navigation-main/style.css
@@ -27,7 +27,6 @@ header {
     color: var(--gray);
     justify-content: space-between;
     margin-bottom: 65px;
-    min-width: ;
 }
 
 .logo img {
@@ -77,11 +76,20 @@ header {
     width: 60%;
 }
 
+.feature-item:hover {
+    color: var(--black);
+}
+
 .feature-wrapper {
     display: flex;
     align-items: center;
     width: 100%;
     margin-bottom: 15px;
+    color: var(--gray);
+}
+
+.nav-item:hover .features {
+    color: var(--gray);
 }
 
 .feature-wrapper:last-of-type {
@@ -105,6 +113,7 @@ header {
     /* color: var(--black); */
     /* fill: var(--black); */
 }
+
 
 .btn-wrapper {
     text-wrap: nowrap;
@@ -192,8 +201,20 @@ main {
     display: none;
 }
 
-@media screen and (max-width: 785px) {
+.modal {
+    display: none;
+}
+
+.menu-icon-close {
+    display: none;
+}
+
+/* @media screen and (max-width: 785px) {
     .btn-wrapper {
+        display: none;
+    }
+
+    .nav {
         display: none;
     }
 
@@ -210,31 +231,97 @@ main {
         margin-bottom: 30px;
     }
     
-}
+} */
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 700px){
     header {
         max-width: 375px;
         margin: 20px auto;
+        position: relative;
     }
 
-    .menu-icon {
-        cursor: pointer;
+    .modal {
+        display: none;
+        position: fixed; 
+        z-index: 1;
+        padding-top: 100px; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%; 
+        overflow: auto; 
+        background-color: rgb(0,0,0); 
+        background-color: rgba(0,0,0,0.4); 
+    }
+
+    .modal.active {
         display: block;
-        align-self: center;
-        /* justify-self: flex-end; */
     }
 
     .wrap {
         width: 100%;
         justify-content: space-between;
     }
+
+    .wrap .nav {
+        display: none;
+    }
+
+    .btn-wrapper {
+        display: none;
+    }
+
+    /*-- Mobile menu --*/
+
+    .wrap.active .nav {
+        display: block;
+        flex-direction: column;
+        position: absolute;
+        top: -20px;
+        right: -20px;
+        z-index: 3;
+        background-color: var(--white);
+        height: 100vh;
+        padding: 80px 80px 80px 50px;
+    }
+
+    .wrap.active .nav-item {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .btn-wrapper.active {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        position: absolute;
+        top: 250px;
+        right: 0;
+        z-index: 3;
+    }
+
+    .wrap.active .menu-icon-close {
+        display: block;
+        z-index: 5;
+        align-self: center;
+        cursor: pointer;
+    }
+
+    .menu-icon {
+        cursor: pointer;
+        display: block;
+        align-self: center;
+        /* z-index: 5; */
+        /* justify-self: flex-end; */
+    }
+
     
     main {
         flex-direction: column-reverse;
         padding: 0;
         max-width: 375px;
     }
+
     .hero {
         width: 100%;
         margin-bottom: 40px;
@@ -260,14 +347,6 @@ main {
     .btn-fill {
         display: block;
         margin: 0 auto 50px;
-    }
-
-    .btn-wrapper {
-        display: none;
-    }
-
-    .nav {
-        display: none;
     }
 
     .hero .desktop-hero {
