--- a/intro-section-with-dropdown-navigation-main/style.css
+++ b/intro-section-with-dropdown-navigation-main/style.css
@@ -57,6 +57,10 @@ header {
     display: none;
 }
 
+.features-update .feature-item {
+    width: 100%;
+}
+
 .nav-item.active .features {
     margin-top: 10px;
     display: block;
@@ -101,19 +105,17 @@ header {
     color: var(--black);
 }
 
-.nav-item:nth-of-type(1)::after,
-.nav-item:nth-of-type(2)::after {
-    content: url(images/icon-arrow-down.svg);
-    margin-left: 5px;
+.nav-item .up {
+    display: none;
 }
 
-.nav-item:nth-of-type(1):hover::after,
-.nav-item:nth-of-type(2):hover::after {
-    content: url(images/icon-arrow-up.svg);
-    /* color: var(--black); */
-    /* fill: var(--black); */
+.nav-item:hover .down {
+    display: none;
 }
 
+.nav-item:hover .up {
+    display: inline;
+}
 
 .btn-wrapper {
     text-wrap: nowrap;
@@ -209,7 +211,7 @@ main {
     display: none;
 }
 
-/* @media screen and (max-width: 785px) {
+@media screen and (max-width: 785px) {
     .btn-wrapper {
         display: none;
     }
@@ -231,7 +233,7 @@ main {
         margin-bottom: 30px;
     }
     
-} */
+}
 
 @media screen and (max-width: 700px){
     header {
@@ -282,6 +284,7 @@ main {
         z-index: 3;
         background-color: var(--white);
         height: 100vh;
+        width: 200px;
         padding: 80px 80px 80px 50px;
     }
 
@@ -295,8 +298,8 @@ main {
         flex-direction: column;
         width: 50%;
         position: absolute;
-        top: 250px;
-        right: 0;
+        top: 650px;
+        right: -15px;
         z-index: 3;
     }
 
@@ -315,6 +318,47 @@ main {
         /* justify-self: flex-end; */
     }
 
+
+    /*--Feature---*/
+    .nav-item.active .features {
+        box-shadow: none;
+        background-color: var(--white);
+        position:static;
+        top: 10px;
+        left: 0;
+        padding: 20px 0;
+
+        /* margin-top: 10px;
+        display: block;
+        width: 150px;
+        background-color: white;
+        padding: 20px 20px;
+        border-radius: 10px;
+        box-shadow: 1px 1px 10px rgba(128, 128, 128, 0.451);
+        position: absolute;
+        top: 20px;
+        left: -60px; */
+    }
+    
+    /* .feature-item {
+        list-style: none;
+        margin: auto;
+        width: 60%;
+    }
+    
+    .feature-item:hover {
+        color: var(--black);
+    }
+    
+    .feature-wrapper {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 15px;
+        color: var(--gray);
+    } */
+
+    
     
     main {
         flex-direction: column-reverse;
